<resources>
    <string name="app_name">AnimalFacts</string>
    <string name="animal_facts">Animal Facts</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="return_home">Return Home</string>
    <string name="complex">Complex</string>
    <string name="moderate">Moderate</string>
    <string name="simple">Simple</string>
    <string name="fact_complexity">Fact Complexity</string>
    <string name="animal">Animal</string>
    <string name="copy_facts">Copy Facts</string>
    <string-array name="Animals">
        <item>Ape</item>
        <item>Bat</item>
        <item>Dolphin</item>
        <item>Frog</item>
        <item>Hedgehog</item>
        <item>Jellyfish</item>
        <item>Starfish</item>
        <item>Toucan</item>
    </string-array>
</resources>